<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lzl.edu.com.ordermeal.RegisterActivity">
    <RelativeLayout
        android:background="@color/bg_btn_press_color"
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <Button
            android:id="@+id/return_btn"
            android:text="@string/title_return"
            android:layout_marginLeft="3dp"
            android:textColor="#ffffff"
            android:layout_centerVertical="true"
            android:textSize="25sp"
            android:background="@drawable/text_press_selector"
            android:layout_width="wrap_content"
            android:layout_height="45dp" />
        <TextView
            android:text="@string/register"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            android:textSize="27sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/myPhoneNumber_et"
            android:hint="@string/phoneNumber"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_edittext"
            />
        <EditText
            android:id="@+id/myPassword_et"
            android:hint="@string/password"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="numberPassword"
            android:background="@drawable/bg_edittext"
            />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/myCheckCode"
                android:hint="@string/checkCode"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:inputType="numberPassword"
                android:background="@drawable/bg_edittext"
                />
            <Button
                android:id="@+id/obtainChechCode_btn"
                android:text="@string/obtain_checkCode"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:background="@drawable/btn_bg_selector"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="40dp"
                android:layout_width="130dp"
                android:layout_height="45dp" />
        </LinearLayout>
        <Button
            android:id="@+id/register_btn"
            android:text="@string/register"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:background="@drawable/btn_bg_selector"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp" />
    </LinearLayout>
</LinearLayout>
