<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/bg_btn_press_color"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        >
    <TextView
        android:text="@string/login"
        android:textColor="#ffffff"
        android:layout_gravity="center"
        android:textSize="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="20dp"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        app:civ_border_width="2dp"
        android:src="@mipmap/logo"
        app:civ_border_color="#ffffff"
        />
    <EditText
        android:id="@+id/myPhoneNumber_et"
        android:hint="@string/phoneNumber"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_edittext"
        />
    <EditText
        android:id="@+id/myPassword_et"
        android:hint="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:inputType="numberPassword"
        android:background="@drawable/bg_edittext"
        />
    <Button
        android:id="@+id/login_btn"
        android:text="@string/login"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:background="@drawable/btn_bg_selector"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="45dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/forgetPass_tv"
            android:text="@string/forgetPass"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColor="@color/text_color_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/regist_tv"
            android:text="@string/register"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color_blue"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>
</LinearLayout>
