<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:background="@color/title_main_teal"
    android:layout_height="45dp">
<LinearLayout
    android:id="@+id/linearBarHome"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_weight="1"
    android:layout_width="0dp"
    android:layout_height="wrap_content">
<ImageView
    android:src="@mipmap/home"
    android:layout_width="30dp"
    android:layout_height="30dp" />
<TextView
    android:text="@string/title_activity_tab_home_page"
    android:textColor="@color/color_white"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/linearBarOrder"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/order"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="@string/title_activity_tab_order_page"
            android:textColor="@color/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearBarFound"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/found"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="@string/title_activity_tab_found_page"
            android:textColor="@color/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearBarMine"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:gravity="center"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/mine"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:text="@string/title_activity_tab_mine_page"
            android:textColor="@color/color_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
